Mon Jan  3 10:50:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Rewrote testing mechanism so that we test by creating an in-memory
	nib, and load that nib.  This way, the testing process has no effect
	on the original objects in the document we are working on.
	Also changed the editor api so that we have a deactivate method.
	Editors are deactivated on archiving and reactivated afterwords -
	this means that we no longer need to destroy all editors during
	archiving in order to stop them being included in the archive.

Thu Dec 23 16:32:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added generic object inspector.

Wed Dec 22 12:16:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Replaced the two NeXT images for sounds and classes.
	Improved drag and drop.

Tue Dec 21 15:30:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added size inspector for autoresizing of views.

Tue Dec 21  8:10:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added inspector for files owner so we can create connections from
	objects inside the nib to the files owner.

Mon Dec 20 14:16:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added connections inspector so connecting objects should work.
	Use information from 'ClassInformation.plist' to specify outlets
	and actions for a class.
	Added GormClassManager stuff to manage this information.

Sat Dec 18 21:24:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Add partial support for draagging into object view.
	Fix move/resize of window subviews to make sure subviews can't be
	dragged outside visible area.

Fri Dec 17 18:44:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Add some support for connections - handle link dragging within window
	editor - raise connection inspector on completion.

Thu Dec 16 21:35:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Change directory structure - add palettes directory, move palettes