@@ -1,3 +1,9 @@
+Tue Jan  4 12:13:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	Various tidyups
+	Somewhat improved documentation
+	Added registration ddefaults stuff
+
 Mon Jan  3 10:50:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	Rewrote testing mechanism so that we test by creating an in-memory
